src/app/components/get-this-title/order-print-copy/order-print-copy.scss
@import 'pattern-library/core/pattern-library/headers';

.order-print-copy {

    background-color: ui-color(default);

    .larger-version {
        display: none;

        @include wider-than($phone-max) {
            display: grid;
            grid-gap: 2rem;
            max-width: 90rem; // Matches dialog width
            overflow-x: auto;
        }
    }

    .phone-version {
        @include wider-than($phone-max) {
            display: none;
        }
    }

    h1 {
        @include set-font(h4);

        margin: 0;

        @include wider-than($phone-max) {
            @include set-font(h3);

            padding: 0;
        }
    }

    .boxes {
        box-sizing: border-box;
        display: grid;
        grid-gap: 2rem;
        justify-items: center;
        padding: 2rem;
        width: 100%;

        @include wider-than($phone-max) {
            grid-gap: 4rem;
            margin: auto;
            padding: 4rem;

            &.boxes-1 {
                grid-template-columns: auto;
            }

            &.boxes-2 {
                grid-template-columns: 1fr 1fr;
            }

            &.boxes-3 {
                grid-template-columns: 1fr 1fr 1fr;
            }
        }
    }

    .box {
        background-color: ui-color(white);
        border: 0;
        border-radius: 0.4rem;
        box-shadow: $card-shadow;
        color: inherit;
        display: grid;
        grid-gap: $normal-margin;
        grid-template-rows: auto auto;
        line-height: normal;
        padding: 2rem;
        text-align: center;
        text-decoration: none;

        @include wider-than($phone-max) {
            grid-template-rows: auto 6.2rem auto 1fr;
            max-width: 30rem;
            padding: 2rem;
        }

        p {
            margin: 0;
        }
    }

    .btn {
        @extend %button;

        padding: 1rem;

        &.primary {
            @extend %primary;
        }

        &.secondary {
            @extend %secondary;
        }
    }

    .info {
        @include set-font(helper-label);

        color: text-color(helper);
    }

}

